--- a/Solution5/Solution5.csproj
+++ b/Solution5/Solution5.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IService1.cs" />
+    <Compile Include="IServiceEvents.cs" />
     <Compile Include="JsonData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
